# client-protos

./: .gitignore  LICENSE.txt  README.md  install_protoc.sh
.github/workflows/: pull_request.yml  push.yml  test.yml
csharp/: .gitignore  Momento.Protos.csproj  Momento.csproj
java/: build.gradle.kts  gradle.properties  settings.gradle.kts
java/buildSrc/: build.gradle.kts
java/buildSrc/src/main/kotlin/: momento.java-common-conventions.gradle.kts  momento.java-library-conventions.gradle.kts
java/generated-sources/descriptors/: client_protos.dsc
javascript/: .gitignore  README.md  generate_protos.sh  gomomento-generated-types-0.0.1.tgz  index.ts  package-lock.json  package.json  tsconfig.json
javascript-web/: .gitignore  README.md  generate_protos.sh  index.ts  package-lock.json  package.json  tsconfig.json
kotlin/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin-messages/: .gitignore  settings.gradle.kts
kotlin-messages/buildSrc/: build.gradle.kts
kotlin-messages/buildSrc/src/main/kotlin/: momento.aws-sdk-conventions.gradle.kts
kotlin-messages/kotlin/messages/: build.gradle.kts
kotlin/android/: build.gradle.kts
kotlin/android/google-protos/google/protobuf/: descriptor.proto
kotlin/buildSrc/: build.gradle.kts
kotlin/jvm/: build.gradle.kts
proto/: auth.proto  cacheclient.proto  cacheping.proto  cachepubsub.proto  common.proto  compiled.js  controlclient.proto  extensions.proto  function.proto  function_types.proto  global_admin.proto  httpcache.proto  leaderboard.proto  permissionmessages.proto  permissionrules.proto  permissions.proto  store.proto  token.proto  trailers.proto  vectorindex.proto  webhook.proto
proto/momento/: auth.proto
proto/protosocket/: cache.proto  common.proto
python/: .gitignore  CONTRIBUTING.md  Makefile  PYPIREADME.md  buildpypi.sh  generate_protos.sh  jfrog_setup.sh  pyproject.toml  run-protoc.sh  setup.cfg  setup.py
python/momento/: setup.cfg  setup.py
python/momento/wire_types/: __init__.py
rust/: .gitignore  Cargo.toml  build.rs  generate_protos.sh  license.txt  update_cargo_toml.py
rust/momento-protos/: Cargo.toml
rust/momento-protos/src/: .gitignore  _.rs  auth.rs  cache_client.pubsub.rs  cache_client.rs  common.rs  control_client.rs  function.rs  function_types.rs  leaderboard.rs  lib.rs  permission_messages.rs  token.rs
rust/momento-protos/src/protosocket/: .gitignore  cache.rs  common.rs  message_impls.rs
rust/proto_generator/: Cargo.toml  build.rs
rust/src/: cacheclient.rs  controlclient.rs  lib.rs  lib.tmpl.rs
typescript/: .gitignore  README.md  generate_protos.sh  package-lock.json  package.json  tsconfig.json
(+4 files in other folders)
