[package]
name = "momento-protos"
version = "0.1.0"
authors = ["<eng@momentohq.com>"]
edition = "2018"

[lib]
name = "momento-protos"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2", features = ["with-bytes"] }
