[package]
name = "momento-protos"
version = "0.1.0"
authors = ["<eng@momentohq.com>"]
edition = "2018"
description = "Generated protobuf clients to interact with Momento services"
license-file = "license.txt"

[lib]
name = "momento_protos"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2", features = ["with-bytes"] }
