[package]
name = "momento-protos"
description = "Generated GRPC and Protocol Buffers types for Momento clients"
homepage = "https://gomomento.com/"
repository = "https://github.com/momentohq/client_protos"
license = "Apache-2.0"
version = "0.1.0"
authors = ["<eng@momentohq.com>"]
edition = "2018"
includes = [
    "Cargo.toml",
    "src/**/*.rs",
    "proto",
]

[lib]
name = "momento_protos"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.3"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"
